[package]
name = "mitty-antenna-rs"
version = "0.1.0"
edition = "2021"
authors = [ "neon" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features = ["d1"] }
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
reqwest = { version = "0.12.9", features = ["json"] }
scraper = "0.22.0"
thiserror = "2.0.9"
serde = { version = "1.0.216", features = ["derive"] }
futures = "0.3.31"
